--- a/praticando/praticando02/contato.html
+++ b/praticando/praticando02/contato.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <main>
     <h1>Contato</h1>
     <a href="#">Whatsapp: (29)9 9999-9999</a><br>
     <a href="#">Linkedin:@deivinson</a><br>
     <a href="#">Instagram:@deivinson</a><br>
     <a href="#">GitHub:@deivinson</a><br><br>
-    <a class="Borda" href="index.html">Voltar á página principal</a>
+    <a href="index.html">Voltar á página principal</a>
+    </main>
 </body>
 </html>
